# cloudmesh-ai-storage

./: CHANGELOG.md  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt
docs/: api.md
src/cloudmesh/ai/app/: storage.yaml
src/cloudmesh/ai/command/: storage.py  storage_table_config.js  storage_table_styles.css  storage_view.html  storage_view.py
src/cloudmesh/ai/storage/: storage_manager.py
