[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudmesh-ai-storage"

dynamic = ["version"]
description = "Extension storage created by CME"
license = {text = "Apache-2.0"}
dependencies = [
    "cloudmesh-ai-cmc",
    "click",
    "rich",
    "pytest",
    "cloudmesh-ai-common",
    "humanize",
]
[tool.setuptools.dynamic]
version = {file = "VERSION"}

[project.entry-points."cloudmesh.ai.command"]
storage = "command.storage:register"

[project.entry-points."cloudmesh.ai.panel.app"]
storage = "cloudmesh.ai.command.storage_view:get_panel_metadata"

[tool.setuptools.packages.find]
where = ["src"]
include = ["command*"]