[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudmesh-ai-storage"

dynamic = ["version"]
description = "Extension storage created by CME"
license = "Apache-2.0"
urls = { "Homepage" = "https://github.com/cloudmesh-ai/cloudmesh-ai-storage" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "cloudmesh-ai-cmc",
    "click",
    "rich",
    "pytest",
    "cloudmesh-ai-common",
    "humanize",
]
[tool.setuptools.dynamic]
version = {file = "VERSION"}

[project.entry-points."cloudmesh.ai.command"]
storage = "command.storage:register"

[project.entry-points."cloudmesh.ai.panel.app"]
storage = "cloudmesh.ai.command.storage_view:get_panel_metadata"

[tool.setuptools.packages.find]
where = ["src"]
include = ["command*"]